// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionButtons render tests should render correctly when no reaction is selected initially 1`] = `
<div
  class="MuiBox-root css-1utx3w7"
  data-testid="reaction-buttons-container-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-like-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    tabindex="0"
    title="like"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7qch46-MuiSvgIcon-root"
      data-testid="reaction-icon-like-default-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66.38.46.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-dislike-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    tabindex="0"
    title="dislike"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7qch46-MuiSvgIcon-root"
      data-testid="reaction-icon-dislike-default-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66-.38-.46-.94-.73-1.54-.73H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ReactionButtons render tests should render the reaction buttons and show the correct reaction icon for { id: '456', kind: 'DISLIKED' } 1`] = `
<div
  class="MuiBox-root css-1utx3w7"
  data-testid="reaction-buttons-container-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-like-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    tabindex="0"
    title="like"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7qch46-MuiSvgIcon-root"
      data-testid="reaction-icon-like-default-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66.38.46.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-dislike-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    tabindex="0"
    title="dislike"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vv6ynt-MuiSvgIcon-root"
      data-testid="reaction-icon-dislike-active-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h2zM2.17 11.12c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22L10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ReactionButtons render tests should render the reaction buttons and show the correct reaction icon for { id: '456', kind: 'LIKED' } 1`] = `
<div
  class="MuiBox-root css-1utx3w7"
  data-testid="reaction-buttons-container-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-like-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    tabindex="0"
    title="like"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vv6ynt-MuiSvgIcon-root"
      data-testid="reaction-icon-like-active-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M2 20h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1H2zm19.83-7.12c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22L14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.84C7 18.95 8.05 20 9.34 20h8.11c.7 0 1.36-.37 1.72-.97z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-dislike-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    tabindex="0"
    title="dislike"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7qch46-MuiSvgIcon-root"
      data-testid="reaction-icon-dislike-default-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66-.38-.46-.94-.73-1.54-.73H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ReactionButtons render tests should render the reaction buttons as disabled when the browser is offline 1`] = `
<div
  class="MuiBox-root css-1utx3w7"
  data-testid="reaction-buttons-container-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
>
  <button
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-like-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    disabled=""
    tabindex="-1"
    title="like"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7qch46-MuiSvgIcon-root"
      data-testid="reaction-icon-like-default-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66.38.46.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
      />
    </svg>
  </button>
  <button
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-e66naw-MuiButtonBase-root-MuiIconButton-root"
    data-testid="reaction-button-dislike-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
    disabled=""
    tabindex="-1"
    title="dislike"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7qch46-MuiSvgIcon-root"
      data-testid="reaction-icon-dislike-default-8d4e6f2c-9a3b-4c5d-b1e7-5f9d8a2b3c4e"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66-.38-.46-.94-.73-1.54-.73H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
      />
    </svg>
  </button>
</div>
`;
